// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReposComponent > should not render p[aria-label="repo-description"] if description is null 1`] = `
<div
  class="bg-zinc-600 p-3 relative max-w-[300px] max-h-[150px] rounded-xl shadow-md before:w-2 before:absolute before:bg-[var(--lang-color)] before:top-0 before:left-0 before:bottom-0 before:rounded-tl-xl before:rounded-bl-xl md:text-xl md:w-[500px]"
  style="--lang-color: #ffffff;"
>
  <h3
    class="text-center p-1 font-bold font-serif"
  >
    Teste Repo 1
  </h3>
  <!--v-if-->
  <div
    class="flex justify-between p-2"
  >
    <p
      aria-label="repo-language"
      class="px-2 py-1 font-sans border-2 border-[var(--lang-color)] text-[var(--lang-color)]"
    >
      Javascript
    </p>
    <a
      class="border-white border-2 px-2 py-1 text-white"
      href="https://github.com/testeuser/testerepo"
      target="_blank"
    >
      See Repo
    </a>
  </div>
</div>
`;

exports[`ReposComponent > should render correctly 1`] = `
<div
  class="bg-zinc-600 p-3 relative max-w-[300px] max-h-[150px] rounded-xl shadow-md before:w-2 before:absolute before:bg-[var(--lang-color)] before:top-0 before:left-0 before:bottom-0 before:rounded-tl-xl before:rounded-bl-xl md:text-xl md:w-[500px]"
  style="--lang-color: #ffffff;"
>
  <h3
    class="text-center p-1 font-bold font-serif"
  >
    Teste Repo 1
  </h3>
  <p
    aria-label="repo-description"
    class="text-justify font-mono text-base break-words mt-3 mb-2"
  >
    lorem ipsum dolor sit amet
  </p>
  <div
    class="flex justify-between p-2"
  >
    <p
      aria-label="repo-language"
      class="px-2 py-1 font-sans border-2 border-[var(--lang-color)] text-[var(--lang-color)]"
    >
      Javascript
    </p>
    <a
      class="border-white border-2 px-2 py-1 text-white"
      href="https://github.com/testeuser/testerepo"
      target="_blank"
    >
      See Repo
    </a>
  </div>
</div>
`;
